# mesh-simplification

./: CMakeLists.txt  README.md
Assignment-01/: README.md
Assignment-01/CG_UFPel/: CMakeLists.txt
Assignment-01/CG_UFPel/include/: meshsimplification.hpp
Assignment-01/CG_UFPel/sources/: main.cpp  meshsimplification.cpp
Assignment-02/: README.md
Assignment-02/assignment02/: CMakeLists.txt
Assignment-02/assignment02/include/: mesh.hpp  model.hpp  model_manager.hpp  modelmanager.hpp  objloader.hpp  texture.hpp
Assignment-02/assignment02/sources/: main.cpp  mesh.cpp  model.cpp  model_manager.cpp  modelmanager.cpp
Assignment01/: CMakeLists.txt
Assignment02/: CMakeLists.txt  README.md
Assignment02/include/: mesh.hpp  model.hpp  modelmanager.hpp  objloader.hpp
Assignment02/mesh/: goose.dds
Assignment02/sources/: main.cpp  mesh.cpp  model.cpp  modelmanager.cpp
Assignment03/: CMakeLists.txt
Assignment03/include/: camera.hpp
Assignment03/sources/: camera.cpp  mesh.cpp  model.cpp  modelmanager.cpp
Studies/CG_UFPel/: CMakeLists.txt
Studies/Questao_3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CG_UFPel.VC.VC.opendb  CG_UFPel.sln  CG_UFPel.vcxproj  CG_UFPel.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Studies/Questao_3/mesh/: Trex.mtl
Studies/Questao_3/sources/: controls.cpp  main.cpp
Studies/tutorial08/: CMakeLists.txt  main.cpp  tutorial08.cpp
shaders/: StandardShading.fragmentshader
sources/: main.cpp
(+16 files in other folders)
